fix: default text alignment

--- a/packages/components/bolt-menu/src/menu.scss
+++ b/packages/components/bolt-menu/src/menu.scss
@@ -15,6 +15,8 @@
   @include bolt-font-size(xsmall);
   @include bolt-font-weight(regular);
   display: block;
+  text-align: left;
+  text-align: start;
 }
 
 // Title
